objects/TW1_Custom_Settings__c.object
<CustomObject>
    <fields>
        <fullName>ID_Task_Notificar_Extrajudicial__c</fullName>
        <label>ID Task Notificar Extrajudicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Notificar_OAB__c</fullName>
        <label>ID Task Notificar OAB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Preencher_Informa_es_Contrato__c</fullName>
        <label>ID Task Preencher Informações Contrato</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Preparar_Oficio__c</fullName>
        <label>ID Task Preparar Ofício</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Preparar_Solicitacao_de_Pagament__c</fullName>
        <label>ID Task Preparar Solicitacao de Pagament</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Prestacao_Contas_Repasse__c</fullName>
        <label>ID Task Prestação Contas Repasse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Prestacao_de_Contas__c</fullName>
        <label>ID Task Prestação de Contas</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Providenciar_Assinatura_Contrato__c</fullName>
        <label>ID Task Providenciar Assinatura Contrato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Providenciar_Pagamento_VMD__c</fullName>
        <label>ID Task Providenciar Pagamento VMD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Providenciar_Registro__c</fullName>
        <label>ID Task Providenciar Registro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Providenciar_Reintegracao_Posse__c</fullName>
        <label>ID Task Providenciar Reintegração Posse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Providenciar__c</fullName>
        <label>ID Task Providenciar Certidoes</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Negociacao_Permuta__c</fullName>
        <label>ID Task Realizar Negociacao Permuta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Simulacao__c</fullName>
        <label>ID Task Realizar Simulação</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Vistoria_Area_Comum__c</fullName>
        <label>ID Task Realizar Vistoria Area Comum</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Vistoria_Cliente__c</fullName>
        <label>ID Task Realizar Vistoria Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Vistoria_Interna__c</fullName>
        <label>ID Task Realizar Vistoria Interna</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Realizar_Vistoria_Unidade_N_Vend__c</fullName>
        <label>ID Task Realizar Vistoria Unidade N Vend</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Reapresentacao_de_Cheque__c</fullName>
        <label>ID Task Reapresentação de Cheque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Recolher_Documentacao__c</fullName>
        <label>ID Task Recolher Documentacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Recolher_assinatura_procuradores__c</fullName>
        <label>ID Task Recolher assinatura procuradores</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Altera_es__c</fullName>
        <label>ID Task Registrar Alterações</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Contrato__c</fullName>
        <label>ID Task Registrar Contrato</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Pendencia_Chaves__c</fullName>
        <label>ID Task Registrar Pendencia Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Recebimento_Chaves__c</fullName>
        <label>ID Task Registrar Recebimento Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Retorno__c</fullName>
        <label>ID Task Registrar Retorno</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Registrar_Sinistro__c</fullName>
        <label>ID Task Registrar Sinistro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Renegociar_Cliente_Escalonar__c</fullName>
        <label>ID Task Renegociar Cliente Escalonar</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Renegociar_Repasse__c</fullName>
        <label>ID Task Renegociar Repasse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Reservar_Unidade__c</fullName>
        <label>ID Task Reservar Unidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Sanar_Pendencia__c</fullName>
        <label>ID Task Sanar Pendência</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Sanar_Pendencias_Reassinatura__c</fullName>
        <label>ID Task Sanar Pendências - Reassinatura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Selecionar_cartorio__c</fullName>
        <label>ID Task Selecionar cartório</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Soiicitar_Pagamento_Condominio__c</fullName>
        <label>ID Task Soiicitar Pagamento Condominio</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitacao_Pagamento__c</fullName>
        <label>ID Task Solicitacao de Pagamento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitar_Cheque_Administrativo__c</fullName>
        <label>ID Task Solicitar Cheque Administrativo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitar_Documento_EscrituraDef__c</fullName>
        <label>ID Task Solicitar Documento EscrituraDef</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitar_Entrega_de_Chaves__c</fullName>
        <label>ID Task Solicitar Entrega de Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitar_Termo_Hipoteca__c</fullName>
        <label>ID Task Solicitar Termo Hipoteca</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Solicitar_assinatura_do_cliente__c</fullName>
        <label>ID Task Solicitar assinatura do cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Substituir_Chaves__c</fullName>
        <label>ID Task Substituir Chaves</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Suspender_Reapresentacao__c</fullName>
        <label>ID Task Suspender Reapresentação</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Trasladar_Contrato__c</fullName>
        <label>ID Task Trasladar Contrato</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Tratativa_Reapresentar_Cheque__c</fullName>
        <label>ID Task Tratativa Reapresentar Cheque</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Task_Verificar_Analise_Banco__c</fullName>
        <label>ID Task Verificar Analise Banco</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Alienacao_Fiduciaria__c</fullName>
        <label>ID TypeRecord Caso Alienação Fiduciária</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Boas_Vindas__c</fullName>
        <label>ID TypeRecord Caso Boas Vindas</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Cessao_Direitos__c</fullName>
        <label>ID TypeRecord Caso Cessão de Direitos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Devolu_o_Cheque__c</fullName>
        <label>ID TypeRecord Caso Devolução de Cheque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Elogio__c</fullName>
        <label>ID TypeRecord Caso Elogio</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Informacao__c</fullName>
        <label>ID TypeRecord Caso Informacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Reclamacao__c</fullName>
        <label>ID TypeRecord Caso Reclamacao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_TypeRecord_Caso_Sugestao__c</fullName>
        <label>ID TypeRecord Caso Sugestao</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Caso_Comunicacao_Sinistro__c</fullName>
        <label>Id Caso Comunicação Sinistro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Caso_Solicitar_Quitacao_Condominial__c</fullName>
        <label>ID TypeRecord Caso Quitação Condominial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Task_Analisar_Condicoes__c</fullName>
        <label>Id Task Analisar Condições</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Task_Analisar_Saldo_Devedor__c</fullName>
        <label>Id Task Analisar Saldo Devedor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Task_Verificar_Situacao_Condominial__c</fullName>
        <label>Id Task Verificar Situacao Condominial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_BaseProducaoUau__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BaseProduçãoUau</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Endereco_Instancia__c</fullName>
        <label>Endereço Instancia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Caso_Vistoria_Unidade_Estoque__c</fullName>
        <label>ID Caso Vistoria Unidade Estoque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Caso_Vistoria_Unidade__c</fullName>
        <label>ID Caso Vistoria de Unidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Task_Analisar_Banco__c</fullName>
        <label>ID Task Analisar Banco</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Task_Providenciar_Documenta_Inter__c</fullName>
        <label>ID Task Providenciar Documentação Intern</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Vistoria_Unidade_Vendida_Estoque__c</fullName>
        <label>ID Caso Vistoria Unidade Vendida Estoque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_LoginUau__c</fullName>
        <label>LoginUau</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_SenhaUau__c</fullName>
        <label>SenhaUAU</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_URLBaseServicoAT__c</fullName>
        <label>URLBaseServicoAT</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_URLBaseServicoUau__c</fullName>
        <label>URLBaseServicoUau</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_URLCallBackAT__c</fullName>
        <description>URL de callback do AT, essa URL é do serviço de atualizar status no SalesForce.</description>
        <label>URLCallBackAT</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_URLCallBackAtualizacaoCadastralUAU__c</fullName>
        <description>URL de CallBack  de atualização cadastral do UAU</description>
        <label>CallBackAtualizacaoCadastralUAU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Settings TW1</label>
</CustomObject>